Remove RTTI dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,5 +30,6 @@ add_subdirectory("lib/")
 option(UNIT_TEST "Build unit tests" OFF)
 if (UNIT_TEST)
     enable_testing()
+    gcc_set_flags_if("-fno-rtti")
     add_subdirectory("tests/")
 endif()
